Fix buttons overflowing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,3 +75,6 @@ img {
   max-width: none !important;
 }
 
+#header_wrap .inner {
+  max-width: none !important;
+}
